# numerical-methods-for-pde

./: .gitignore  .pre-commit-config.yaml  DESENVOLVIMENTO.md  Makefile  NONLINEAR_README.md  README.md  config.yaml  main.py  melhorias_propostas.md  nonlinear_example.py  pyproject.toml  simple_nn_for_nonlinear_systems.md
article/: 01_titulo_e_autores.md  02_introducao.md  03_definicao_e_desenvolvimento_dos_problemas.md  04_resultados_numericos.md  05_consulta_ia.md  06_conclusoes.md  07_referencias.md  08_apendice_algoritmos.md  ARCHITECTURE.md  DOCUMENTACAO_UNIFICADA.md  comparacao_desempenho.md  definicao_e_desenvolvimento_dos_problemas.md  resultados_numericos.md
data/: Matriz_A.txt  Vetor_b.txt
diagrams/: application_architecture.md  fixed_point_iteration_flowchart.md  gauss_seidel_method_flowchart.md  gaussian_elimination_flowchart.md  gradient_descent_flowchart.md  jacobi_method_flowchart.md  linear_solver_flowchart.md  linear_solvers.md  lu_decomposition_flowchart.md  nonlinear_solver_sequence.md  nonlinear_solvers.md
latex/: artigo_final.tex
linear_solver/: __init__.py  base.py
linear_solver/methods/: conjugate_gradient.py  gauss_seidel.py  gauss_seidel_order2.py  jacobi.py  jacobi_order2.py
linear_solver/utils/: __init__.py  csv_loader.py  matrix_generator.py  matrix_validator.py
results/: benchmark_timing_sistema_brasileiro_36x36_tol_1eneg03_tol_1eneg03.txt  benchmark_timing_sistema_brasileiro_36x36_tol_1eneg04_tol_1eneg04.txt  benchmark_timing_sistema_brasileiro_36x36_tol_1eneg05_tol_1eneg05.txt  benchmark_timing_sistema_brasileiro_36x36_tol_1eneg06_tol_1eneg06.txt  summary_report.txt
results/nonlinear/: nonlinear_results_tol_1e-04_20251028_002917.txt  nonlinear_results_tol_1e-04_20251028_021859.txt  nonlinear_results_tol_1e-04_20251028_084548.txt
src/: cli.py
src/analysis/: matrix_analyzer.py
src/app/: linear_solver_app.py  nonlinear_solver_app.py
src/benchmark/: main.py
src/linear_solver/: __init__.py  base.py
src/linear_solver/methods/: __init__.py  cgs.py  conjugate_gradient.py  gauss_seidel.py  gauss_seidel_order2.py  jacobi.py  jacobi_order2.py  preconditioned_cg.py
src/linear_solver/utils/: __init__.py  csv_loader.py  matrix_generator.py  matrix_validator.py
src/nonlinear_solver/: __init__.py  base.py
src/nonlinear_solver/methods/: __init__.py  gradient.py  iteration.py  newton.py
src/utils/: files.py
tests/: __init__.py  conftest.py  test_csv_loader.py  test_iterative_methods.py
